--- a/src/main.css
+++ b/src/main.css
@@ -25,3 +25,16 @@ display:flex ;
    right: 400px;
 
  }
+
+
+ #select-category{
+   width: 800px;
+   align-content: center ;
+   margin-top: 30px;
+   margin-left: 30px;
+   border: #7d8591 solid 1px;
+}
+
+#select-category:hover {
+   border: #7d8591 solid 1px;
+}
