--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,10 @@
 #contantmain {
-display:flex ;
+display:grid ;
  flex-wrap: flexWrap ;
   justify-content: space-between ;
    gap: 20px ;
    margin-top:3% ;
+grid-template-columns: repeat(auto-fill,minmax(280px, 1fr));
 }
 
 #FormSearch{
